--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,38 @@ body {
   height: 16px;
   border: 0.1px solid #000;
 }
+
+#all-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+  padding: 20px 20px;
+  margin: 20px auto;
+  max-width: 360px;
+}
+
+#all-buttons button {
+  padding: 5px 10px;
+  font-size: 11px;
+  cursor: pointer;
+  border-radius: 5px;
+  border: none;
+  background-color: #f0f0f0;
+  transition: background-color 0.3s ease;
+}
+
+#all-buttons button:hover {
+  background-color: #ddd;
+}
+
+#random-color-button.activated {
+  color: white;
+  box-shadow: 0px 0px 10px 2px green;
+  border: none;
+}
+
+#random-color-button.deactivated {
+  color: black;
+  box-shadow: 0px 0px 10px 2px red;
+}
